--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "node-sass --include-path sass ./sass/index.scss ./css/style.css -w"
+    "build": "node-sass --include-path sass ./sass/index.scss ./css/style.css -w",
+    "start":"nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,9 @@
     "node-sass": "^7.0.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "mongoose": "^6.9.1",
+    "socket.io": "^4.5.4"
   }
 }
