--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "node-sass --include-path sass ./sass/index.scss ./css/style.css -w",
-    "start":"nodemon src/app.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.9.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.5.4"
   }
 }
