--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "node-sass": "^7.0.1"
   },
   "dependencies": {
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mongoose": "^6.9.1",
     "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.5.4"
