--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^7.0.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -29,6 +30,10 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.9.1",
     "mongoose-paginate-v2": "^1.7.1",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.5.4"
   }
 }
