--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "node-sass --include-path sass ./sass/index.scss ./css/style.css -w",
+    "build": "node-sass --include-path sass ./src/public/sass/index.scss ./src/public/css/style.css -w",
     "start": "nodemon src/app.js"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
