--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8080
 URI = 'mongodb+srv://msivadon:coderhouse@cluster0.zpwyhsx.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCIA = MONGO
+NODE_ENV = development
