--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT = 8080
 URI = 'mongodb+srv://msivadon:coderhouse@cluster0.zpwyhsx.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCIA = MONGO
 NODE_ENV = development
+GMAIL_USER= sivadon.m@gmail.com
+GMAIL_PASSWORD= vkfpmwrbiztqmkoa
+PRIVATE_KEY = secretkey
