--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "node-sass --include-path sass ./src/public/sass/index.scss ./src/public/css/style.css -w",
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "nodemon src/app.js",
+    "dev": "node src/app.js",
     "test": "mocha -t 10000 test/supertest.test.js"
   },
   "repository": {
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "mongoose-paginate-v2": "^1.7.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
